--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
+<h5><a href='https://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence & Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -89,7 +89,7 @@ Internet Solutions Corporation.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
+<h5><a href='https://www.workable.com/j/3EE2BF3FA5'>Paymentsense - Jobs: Business Intelligence Analyst (12 month FTC ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Business Intelligence Analyst (12 month FTC, Maternity 
 Cover) at Paymentsense.</p>
@@ -135,11 +135,11 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light">Redwood City, CARedwood City, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omaze/jobs/4367960002'>Job Application for Director, Business Intelligence at Omaze</a></h5> 
 <p><span class="badge badge-light">Los Angeles Los Angeles California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/2103840DB2'>Datatonic - Jobs: Business Intelligence Consultant - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/2103840DB2'>Datatonic - Jobs: Business Intelligence Consultant - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -189,7 +189,7 @@ Media Hungary Kft.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<h5><a href='https://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Chicago, IL; Full Time; Data Analytics; Mid Level. Share. Who We Are: We 
 believe a workplace food program is something employees should love and look
@@ -263,7 +263,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/sojern/jobs/business-intelligence-analyst-bnMASIQKWr6ApraKkRyNN8'>Business Intelligence Analyst #1067 job at Sojern in Omaha, NE, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -273,7 +273,7 @@ in Herten (published: 12.07.2019). Apply now or check the other available jobs.<
 strategic decisions that drive growth. The Business Intelligence team at 
 Mavenlink?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/scp-health/job/om89afwx'>SCP Health Careers - Business Intelligence Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -293,7 +293,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
+<h5><a href='https://jobs.lever.co/ninjavan/95d5d16e-5a80-481b-ad20-717e66d48ea6'>Ninja Van - Business Intelligence &amp; Project Management - Solution</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -342,7 +342,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/arcadia/jobs/4362162002'>Job Application for Healthcare Business Intelligence Analyst at Arcadia.io</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/arcadia/jobs/4362162002'>Job Application for Healthcare Business Intelligence Analyst at Arcadia.io</a></h5> 
 <p><span class="badge badge-light">Rockford</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -378,7 +378,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1782194'>Job Application for Product Business Intelligence Analyst at Box</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1782194'>Job Application for Product Business Intelligence Analyst at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -390,7 +390,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medigo/jobs/1770305'>Job Application for (Junior) Business Intelligence Analyst (m/f/x) at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medigo/jobs/1770305'>Job Application for (Junior) Business Intelligence Analyst (m/f/x) at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... We are currently looking for a (Junior) Business Intelligence Analyst (m/f/x) to join 
 our BI team. The position is available at the earliest possible date in full-time?...</p>
@@ -420,7 +420,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
+<h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-789'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
